fix: allow scrolling by removing overflow hidden

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,5 @@
 .container {
   height: 100%;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
